Align text left inside hero section

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 development:
   password: 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
-  theme_id: "112770973863"
-  store: https://claudianaturalbeauty.myshopify.com
+  theme_id: "118332817575"
+  store: claudianaturalbeauty.myshopify.com
